--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,9 +5,10 @@
     src: url(https://github.com/IBM/plex);
 }
 .main-container {
-    margin-top: 6em;
     display: flex;
     justify-content: center;
+    margin: 0.5em;
+    margin-top: 3.5em;
 }
 .vertical-container {
     display: flex;
