--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,6 +61,8 @@
     bottom: 5.5vh;
     width: 99vw;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     -webkit-user-select: none;  /* Chrome all / Safari all */
     -moz-user-select: none;     /* Firefox all */
