--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav role="navigation">
   <ul>
     <li><a href="/" {% if page.url == "/" %}class="active"{% endif %}>Blog</a></li>
-    <li><a href="/tags" {% if page.url == "/tags" %}class="active"{% endif %}>Memex</a></li>
+    <!--<li><a href="/tags" {% if page.url == "/tags" %}class="active"{% endif %}>Memex</a></li>-->
     <li><a href="/about" {% if page.url == "/about" %}class="active"{% endif %}>About</a></li>
     <!--<li><a href="/projects" {% if page.url == "/projects" %}class="active"{% endif %}>Projects</a></li>-->
     <!--<li><a href="/atom.xml">Feed</a></li>-->
