--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -20,13 +20,14 @@
 {% if site.google_analytics %}
 
     {% if jekyll.environment == "production" %}
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
         <script>
-            window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
 
-            ga("create", "{{ site.google_analytics }}", "auto");
-            ga("send", "pageview");
+            gtag('config', '{{ site.google_analytics }}');
         </script>
-        <script async src="https://www.google-analytics.com/analytics.js"></script>
     {% else %}
         <!-- jekyll.environment variable is "{{ jekyll.environment }}" and not "production", Google Analytics snippet will be skipped. -->
     {% endif %}
